add selectors in in.css

--- a/index.html
+++ b/index.html
@@ -62,5 +62,32 @@
     <li>Libero debitis quam eos nisi expedita cumque quisquam voluptates ratione, doloribus maiores quae accusantium in soluta? Reprehenderit, possimus tenetur, suscipit aperiam sed ad tempora harum beatae, cupiditate nihil voluptatem blanditiis?</li>
     <li>Ea iusto obcaecati incidunt cumque delectus sequi, dolor dolorum eaque, animi molestiae assumenda molestias tempora ut. Dolor tenetur unde distinctio. Ea, necessitatibus nesciunt expedita minus quisquam ab molestias error quod!</li>
   </ul>
+  <article>
+    <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque enim corporis odio quidem eligendi, hic itaque molestiae modi? Earum nesciunt sed ea ab ipsum a molestias amet harum molestiae natus!</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet placeat eligendi fugiat quam vero suscipit, ea omnis accusamus aperiam cumque, rem minus. Hic iure praesentium eos! Non id ipsam hic.</p>
+    <p>Deserunt voluptatibus aperiam quia ullam nesciunt est magni voluptatum, facere tempore alias, quisquam mollitia aliquid dignissimos iste! Voluptate veniam aut ad, dolor, laboriosam in quam reprehenderit vitae, nemo nobis quos?</p>
+    <p>Doloribus harum mollitia magni? Aperiam quia aut, nobis ipsum fugit temporibus cum quibusdam omnis non pariatur, quo in, id excepturi. Ducimus quaerat nulla possimus, harum accusamus blanditiis nemo eveniet labore?</p>
+    <img src="./02.jpg" alt="mountain" width="200px">
+    <p>Rerum, doloribus suscipit blanditiis minima, voluptatem incidunt excepturi quas pariatur ea illum perferendis maxime temporibus. Esse doloribus, enim quasi asperiores alias nihil mollitia corporis. Facere ut dolorum voluptates sapiente harum!</p>
+    <p>Dolore doloribus amet, eos adipisci similique mollitia, commodi maiores, magni molestias iste aspernatur nesciunt cupiditate! Placeat deleniti dolor porro magni dolore veniam minima earum, eum at, vero, nam cumque odio.</p>
+    <p>Itaque repellendus fuga iure ipsa quasi veritatis maxime doloribus provident? Voluptatum, voluptatem. Eum vel numquam necessitatibus. Molestiae, illum? Modi optio saepe praesentium odio hic dolor at maiores asperiores non aut.</p>
+    <p>Cupiditate, nobis eos? A expedita nam adipisci esse, repudiandae consequatur ex delectus quisquam! Laboriosam nesciunt aliquam aliquid eos facilis enim saepe molestias doloremque itaque facere voluptatibus perspiciatis veniam, obcaecati ipsam.</p>
+    <img src="./24c3c33640646895aead29e3dd1a_large.jpg" alt="hel" width="200px">
+    <p>Similique quasi nesciunt modi dignissimos. Eum maiores sed explicabo temporibus soluta harum velit obcaecati dolorem iure, voluptatibus asperiores nihil enim impedit officia molestias voluptas ratione eius rem! Dolorum, cupiditate iure.</p>
+    <p>Dolore enim neque ducimus illum optio, maiores doloribus aspernatur animi cupiditate! Qui, recusandae officia, obcaecati ipsa fugit unde incidunt distinctio labore quae provident reiciendis sed iusto eveniet ducimus iure? Dolor?</p>
+    <p>Voluptates, autem velit, earum eum a iusto totam natus ipsa perferendis sint accusantium assumenda, numquam cupiditate enim optio. Quae doloribus asperiores et earum ad officia exercitationem laboriosam a libero harum.</p>
+    <p>Quis aut adipisci excepturi nobis libero sapiente ducimus vel rerum, laboriosam cupiditate velit vitae tempora! Assumenda, doloremque dolorum, ad facere eveniet nesciunt exercitationem itaque aut quia voluptate soluta fugiat suscipit?</p>
+    <p>Quas ex ratione dolores similique minus. Adipisci autem nemo consequatur possimus saepe? Deleniti doloremque quos qui magnam accusantium quo nemo reiciendis voluptatem! Ut nulla quidem soluta aspernatur id qui accusamus?</p>
+    <p>Corrupti, optio provident? Aspernatur mollitia officiis ipsam commodi, odit itaque, vel iure tenetur dolores repellendus facilis velit quidem quasi dolore provident eveniet, explicabo fugit perspiciatis eos ratione! Molestias, quaerat in?</p>
+    <img src="./750x562 (1).jpg" alt="tel" width="200px">
+    <p>Aspernatur repudiandae provident quaerat saepe consequuntur libero maiores delectus enim natus. Unde enim ipsa nobis a, officia sunt iusto laboriosam molestiae ex dignissimos perferendis fugiat voluptatem maiores? A, quasi necessitatibus?</p>
+    <p>Hic, eos quidem voluptatibus debitis architecto nisi nam? Autem animi ea voluptate quisquam debitis harum repellat. Dolor ullam vitae distinctio eligendi nisi delectus non, vero expedita. Ut delectus provident quibusdam!</p>
+    <p>Labore fugit repellat quae, harum dolores possimus quas sint. Nesciunt quia voluptatum, ducimus sed optio numquam quos laborum debitis eligendi aliquam error nisi. Eos perspiciatis iste praesentium doloribus, numquam deserunt.</p>
+    <p>Officia consequatur blanditiis nobis nemo fugiat et tempore excepturi ratione est incidunt. Officiis animi nemo, tempore dolorem eum, architecto optio iure veniam voluptatum, voluptate ut molestias consectetur placeat dolor provident.</p>
+    <p>Nemo quo sit harum labore voluptas, molestias neque dolores dignissimos possimus reprehenderit, laudantium iure, assumenda nostrum impedit autem velit minima non ut? Dolorem mollitia ipsa alias fuga recusandae consequatur vel.</p>
+    <p>Doloribus quasi magnam culpa impedit ducimus! Expedita minus ea voluptates aliquam, placeat, debitis eius sapiente vitae neque consectetur quisquam repellendus reiciendis ducimus! Minus deleniti porro magni quia beatae tempore ipsam.</p>
+    <p>Doloremque perspiciatis sint quaerat numquam ut deleniti veniam possimus, aut quibusdam labore exercitationem provident velit accusantium dolore ab accusamus nihil quidem et. Assumenda reiciendis commodi cupiditate nulla odit dolor fugiat!</p>
+    <footer>lorem ipsum dolor lore lorem</footer>
+  </article>
 </body>
 </html>
